# OpenGL-SpaceStation

./: CMakeLists.txt  README.md  layout_data.h
FreeCAD/: Project.fcstd  obj_to_header.py
assets/: skybox.fs  space_station.vs
src/: Camera.h  Model.h  main.cpp
src/shader/: Shader.cpp  Shader.h
